# Parallel-Programming-In-Grid-And-Cloud

./: .gitignore  README.md  pass.txt  reF.txt  reFromLin.txt  re_mpi.txt
ACO/: Peer Evaluation.txt  README.md  Topic Presentation.pptx  build.gradle  cities.txt  gaga.txt  outputs  settings.gradle
ACO/MASS/: ACO.java  ACO_Mass.java  Area.java  Matrix.java  Randoms.java  Wave2DMass.java  Worker.java  lab5.java
ACO/Report/: FinalReport.aux  FinalReport.out  FinalReport.tex  FinalReport.toc  Spark.docx  outputwith4node.txt  result.xlsx  result2.xlsx
lab1/: CMakeLists.txt  compile.sh  pi_integral.cpp  pi_integral_omp.cpp  pi_monte.cpp  pi_monte_omp.cpp
lab2/: CMakeLists.txt  compile.sh  greetings  greetings.cpp  matrix  matrix.cpp  matrix_mpi  matrix_mpi.cpp  mpd.hosts  mpi_setup.txt  mpi_setup_new.txt  mpi_setup_new.txt~
prog1/: .gitignore  CMakeLists.txt  EvalXOverMutate.cpp  README.md  Timer.cpp  Timer.h  Trip.h  Tsp.cpp  WangYangxiao.doc  chromosome.txt  cities.txt  cmake.txt  compile.sh  dismax.txt  initialize.cpp
prog1/Report/: output.txt  prog1Report.aux  prog1Report.out  prog1Report.tex  prog1Report.toc
prog2/: CDF_hybrid.cpp  CMakeLists.txt  WangYangxiao.docx  Wave2D  Wave2D.cpp  Wave2D_mpi.cpp  Wout.java  compile.sh  measurements.txt  mpi_setup.txt  myMPI  reFromWd.txt  rex.txt  z.txt  zowo.txt
prog2/Report/: prog2Report.aux  prog2Report.out  prog2Report.tex  prog2Report.toc
prog3/: WordCount.java  neo  outp  part-00000  pom.xml
prog3/Report/: prog2Report.aux  prog3Report.out  prog3Report.tex  prog3Report.toc
prog3/input/: test1.txt  test2.txt
(+51 files in other folders)
